--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-MONGO_URI="mongodb://root:password@localhost:27017/"
+MONGO_URI="mongodb://root:password@127.0.0.1:27017/"
+REDIS_HOST="127.0.0.1"
+REDIS_PORT=6379
